# CDGHOPT

./: .gitignore  Cargo.toml  Makefile.toml  README.md
background/: Cargo.toml  Makefile.toml  index.js
background/src/: lib.rs
extension/: manifest.json
extension/background/: background.js
module/: Cargo.toml
module/src/: http.rs  lib.rs
popup/: Cargo.toml  Makefile.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
popup/src/: app.rs  body.rs  browser.rs  header.rs  log.rs  main.rs  method.rs  progress.js  response.rs  send.rs  uri.rs
