[workspace]
resolver = "2"
members = ["module", "popup", "background"]

[workspace.dependencies]
console_error_panic_hook = { version = "0.1.7" }
http = { version = "1.1.0", default-features = false }
module = { version = "0.7.0", path = "module" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
snafu = "0.8.4"
time = { version = "0.3", features = [
    "serde",
    "formatting",
    "parsing",
    "wasm-bindgen",
    "macros",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["fmt", "local-time"] }
tracing-web = "0.1.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.43"
web-extensions-sys = "0.4.1"

[profile.release]
lto = true
