[package]
name = "background"
version = "0.5.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["fmt", "local-time"] }
tracing-web = "0.1.3"
time = { version = "0.3", features = ["wasm-bindgen", "macros"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1.7" }
http = { version = "1.1.0", default-features = false }
module = { version = "0.5.2", path = "../module" }
wee_alloc = "0.4.5"
snafu = "0.8.4"
url = "2.5.2"
web-extensions-sys = "0.4.1"
web-extensions = "0.3.0"
