[package]
name = "background"
version = "0.7.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook.workspace = true
http.workspace = true
module.workspace = true
reqwest = { version = "0.12.5", features = ["blocking"] }
snafu.workspace = true
serde_json.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-web.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wee_alloc = "0.4.5"
web-extensions-sys.workspace = true
web-extensions = "0.3.0"
url = "2.5.2"
