[package]
name = "popup"
version = "0.5.2"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.13", features = ["csr"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["fmt", "local-time"] }
tracing-web = "0.1.3"
time = { version = "0.3", features = ["wasm-bindgen", "macros", "serde"] }
http = { version = "1.1.0", default-features = false }
wasm-bindgen = "0.2.93"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
module = { version = "0.5.2", path = "../module" }
wasm-bindgen-futures = "0.4.43"
snafu = "0.8.4"
web-extensions-sys = "0.4.1"
backon = "1.2.0"
thaw = { version = "0.3.4", features = ["csr"] }
uuid = { version = "1.10.0", features = ["v7", "js", "serde"] }
