[package]
name = "popup"
version = "0.7.0"
edition = "2021"

[dependencies]
console_error_panic_hook.workspace = true
backon = "1.2.0"
http.workspace = true
http-types = { version = "2.12.0", default-features = false }
leptos = { version = "0.7.0", features = ["csr"] }
snafu.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
module.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-web.workspace = true
thaw = { version = "0.4.1", features = ["csr"] }
time.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-extensions-sys.workspace = true
uuid = { version = "1.10.0", features = ["v7", "js", "serde"] }
encoding = "0.2.33"
web-sys = "0.3.76"
thaw_utils = { version = "0.1.1", features = ["csr"] }
